Evoluindo exemplos de erro do swagger